[package]
name = "controller"
version = "0.1.5"
authors = ["ntdat02092002 <datnt030902@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
domain = { path = "../domain" , version = "0.1.5"}
tokio-postgres = "0.7.2"
db-postgres = { path = "../db-postgres", version = "0.1.5" }
hvcg_biography_openapi_saint = "0.7.2"
uuid = "0.8"
