[package]
name = "saint"
version = "0.1.5"
edition = "2018"

[dependencies]
tokio = { version = "1", features = ["macros"] }
#lambda_http = { git = "https://github.com/coolreader18/aws-lambda-rust-runtime", branch = "tokio1"}
lambda_http = "0.3.0"

serde_json = "1.0"
controller = { path = "../../saint-app/controller" }
domain = {path = "../../saint-app/domain"}
#jsonwebtoken = "8.0.0-beta.2"
jsonwebtoken = "7.2.0"
serde = { version = "1.0", features = ["derive"] }
uuid = "0.8"
hvcg_biography_openapi_saint = "0.4.0"
serde_qs = "0.8.4"

[dev-dependencies]
dotenv = "0.15.0"
